# markdownai

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  plan.md
.github/workflows/: release.yml
src/: cli.rs  engine.rs  frontmatter.rs  index.rs  lib.rs  links.rs  main.rs  manipulate.rs  markdown.rs  output.rs  section.rs
tests/: cli_frontmatter_query.rs  cli_graph.rs
