[package]
name = "markdownai"
version = "0.1.0"
edition = "2021"
description = "Agent-first Markdown CLI"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tantivy = "0.22"
pulldown-cmark = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
regex = "1"
glob = "0.3"
ignore = "0.4"
walkdir = "2"
unicode-script = "0.5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
